src/objects/Member__c.object
<CustomObject>
    <fields>
        <fullName>County__c</fullName>
        <description>County of the Member</description>
        <label>County</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <description>Member&apos;s Date of Birth</description>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Eligibility__c</fullName>
        <description>Member Eligibility</description>
        <label>Eligibility</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <description>Member&apos;s First Name</description>
        <label>First Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Medicare__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Member is medicare or not</description>
        <label>Is Medicare</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <description>Member&apos;s Last Name</description>
        <label>Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSN__c</fullName>
        <label>SSN</label>
        <length>25</length>
        <maskChar>X</maskChar>
        <maskType>ssn</maskType>
        <type>EncryptedText</type>
    </fields>
    <label>Patient</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ENT{0000000000}</displayFormat>
        <label>Entity Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Patients</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>